compiler/testData/diagnostics/tests/multiplatform/hmpp/kt-55570.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
// MODULE: common
// TARGET_PLATFORM: Common

// MODULE: main()()(common)
actual class <!ACTUAL_WITHOUT_EXPECT!>A<!>
